# senecampus-alpha

./: .gitignore  README.md  Utilities  clustering.py  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  anchors.py  users.py
app/core/: config.py  database.py
app/models/: user.py  vector.py
app/services/: __init__.py  anchors.py  users.py  vectors.py
data/anchors/: campus-exploration-walk.yaml  chess-blitz-tournament.yaml  cultural-picnic.yaml  mindfulness-relaxation-space.yaml  musical-improv-circle.yaml  ping-pong-blitz-tournament.yaml  quick-screening-club.yaml  recycled-origami-workshop.yaml  study-session.yaml
static/anchors/: campus-exploration-walk.html  chess-blitz-tournament.html  cultural-picnic.html  mindfulness-relaxation-space.html  musical-improv-circle.html  ping-pong-blitz-tournament.html  quick-screening-club.html  recycled-origami-workshop.html  study-session.html
